# HadCRUT5

./: .gitignore  .pylintrc  README.md  hadcrut5-bars.py  hadcrut5-plot.py  hadcrut5-stripe.py  hadcrut5_bars.py  hadcrut5_close.py  hadcrut5_plot.py  hadcrut5_stripe.py  hadcrut5lib.py  hadcrut5lib_tests.py.SAVE  plots.sh  pylint.sh  pyproject.toml
.github/workflows/: ci.yaml
