[project]
name = "pyhadcrut5"
version = "1.0"
description = "HadCRUT5 temperature datasets visualizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8.0",
    "netcdf4>=1.6.5",
    "numpy>=1.26",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pylint>=3.3.2",
    "types-requests>=2.32.0.20241016",
]
