[project]
name = "pyhadcrut5"
version = "1.0"
description = "HadCRUT5 temperature datasets visualizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8.0",
    "netcdf4>=1.6.5",
    "numpy>=1.26",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.14.0",
    "pylint>=3.3.2",
    "types-requests>=2.32.0.20241016",
]

[tool.black]
line-length = 100

[tool.pylint]
disable = ["R0801"]

[tool.pylint.design]
max-args = 8
max-locals = 20
max-positional-arguments = 8
